# game_for_test

./: README.md  loader_images.py  main.py  main_copy_2026_01_26.py  ml_class.py  pyproject.toml  qwerty.py  qwerty_2.py  qwerty_3.py  крестики_нолики.py
images/: bg
