[tool.poetry]
name = "game_for_test"
version = "1.0.11"
description = "adviser"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
alembic = "1.15.1"
annotated-types="0.7.0"
anyio = "4.9.0"
apscheduler	= "3.11.0"
asgi-lifespan = "2.1.0"
async-property = "0.2.2"
catboost = "1.2.8"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
colorama = "0.4.6"
commonmark = "0.9.1"
contourpy = "1.3.2"
cryptography = "44.0.2"
cycler = "0.12.1"
cython = "3.0.12"
deprecation = "2.1.0"
et-xmlfile = "2.0.0"
fastapi = "0.115.11"
fonttools = "4.57.0"
graphviz = "0.20.3"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
idna = "3.1"
importlib-metadata = "5.2.0"
joblib = "1.4.2"
jwcrypto = "1.5.6"
kiwisolver = "1.4.8"
logrich = "1.0.7"
loguru = "0.7.3"
mako = "1.3.9"
markupsafe = "3.0.2"
matplotlib = "3.10.1"
multidict = "6.2.0"
narwhals = "1.35.0"
numpy = "2.2.4"
openpyxl = "3.1.5"
orjson = "3.10.15"
packaging = "24.2"
pandas = "2.2.3"
patsy = "1.0.1"
pillow = "11.2.1"
plotly = "6.0.1"
pmdarima = "2.0.4"
propcache = "0.3.0"
psycopg2-binary = "2.9.10"
pycparser = "2.22"
pydantic-core = "2.27.2"
pydantic-settings = "2.8.1"
pydantic = "2.10.6"
pydash = "8.0.5"
pygments = "2.19.1"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-keycloak = "4.7.3"
pytz = "2025.1"
requests-toolbelt = "1.0.0"
requests = "2.32.3"
rich = "12.6.0"
ruff = "0.4.10"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.39"
starlette = "0.46.1"
statsmodels = "0.14.4"
tabulate = "0.9.0"
threadpoolctl = "3.6.0"
toml = "0.10.2"
typing-extensions = "4.12.2"
tzdata = "2025.1"
tzlocal = "5.3.1"
urllib3 = "2.3.0"
uvicorn = "0.37.0"
win32-setctime = "1.2.0"
yarl = "1.18.3"
zipp = "3.21.0"
pygame = "^2.6.1"
gif-pygame = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.4.10"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.black]
line-length = 100
include = '\.pyi?$'
target-version = ['py311']
quiet = true
fast = true

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = ".venv"
venvPath = "./"
exclude = ["**/__pycache__", ".git", ".venv"]
workspaceFolder = true
